initial dark mode made

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>BetterSpace</h1>
+    <div class="header-top">
+      <h1>BetterSpace</h1>
+      <label class="toggle-switch" title="Toggle dark mode">
+        <input type="checkbox" id="dark-mode-toggle" />
+        <span class="toggle-slider"></span>
+        <span class="toggle-label">Dark mode</span>
+      </label>
+    </div>
     <p class="subtitle">Rename your Brightspace courses</p>
   </header>
 
